# engine

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
src/engine/: __about__.py
src/engine/core/: game.py
src/engine/core/modules/: loader.py  module.py
src/engine/core/modules/game/: game.py
src/engine/core/modules/loop/: loop.py
src/engine/core/modules/renderer/: renderer.py
src/engine/core/modules/renderer/other/: render.py  window.py
tests/: __init__.py  module.py  test1.py  test_main.py  utils.py
