[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engine"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AsleepRodent", email = "Qualitychronology@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "raylib",
  "watchdog"
]

[project.urls]
Documentation = "https://github.com/AsleepRodent/engine#readme"
Issues = "https://github.com/AsleepRodent/engine/issues"
Source = "https://github.com/AsleepRodent/engine"

[tool.hatch.version]
path = "src/engine/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/engine tests}"

[tool.coverage.run]
source_pkgs = ["engine", "tests"]
branch = true
parallel = true
omit = [
  "src/engine/__about__.py",
]

[tool.coverage.paths]
engine = ["src/engine", "*/engine/src/engine"]
tests = ["tests", "*/engine/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
